fix date and author of blog on mobile

--- a/src/sass/global/blog.scss
+++ b/src/sass/global/blog.scss
@@ -43,6 +43,9 @@
 		height: 100%;
 		max-height: 250px;
 		display: block;
+		@media (max-width: $screen-sm-max) {
+			max-height: 100%;
+		}
 		img {
 			display: block;
 			width: 100%;
@@ -80,7 +83,6 @@
 		overflow-y: auto;
 		font-size: 14px;
 		line-height: 1.1;
-		padding: 0 2rem;
 		margin-bottom: 0;
 
 		@media (max-width: $screen-sm-max) {
